# masm-decompiler

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.githooks/: pre-commit
scripts/: stdlib_header_oracle.py
src/: decompile.rs  dominance.rs  lib.rs  main.rs  passthrough.rs
src/analysis/: dead_code_elimination.rs  expression_propagation.rs  loop_indices.rs  mod.rs  used_vars.rs
src/callgraph/: mod.rs
src/cfg/: builder.rs  mod.rs
src/fmt/: mod.rs
src/frontend/: mod.rs  testing.rs  workspace.rs
src/ir/: mod.rs
src/lift/: SSA.md  SUBSCRIPTS.md  inst.rs  mod.rs  stack.rs
src/lifting/: inst.rs  mod.rs  stack.rs
src/signature/: analysis.rs  domain.rs  effects.rs  mod.rs  solver.rs
src/simplify/: eliminate.rs  mod.rs  propagate.rs  propagate_copies.rs  propagate_exprs.rs  shorten_call_targets.rs  simplify.rs  (+1 more)
tests/: assignment_formatting.rs  basic_decompilation.rs  cfg_builder.rs  conditional_word_ops_decompilation.rs  decompile_api.rs  format_invariants.rs  library_resolution.rs  lifting_stack_depth_regression.rs  loop_decompilation.rs  mtree_get_decompilation.rs  nested_blocks_regression.rs  passthrough_args.rs  proc_formatting_regression.rs  push_slice_decompilation.rs  push_word_decompilation.rs  repeat_decompilation.rs  signature_inference.proptest-regressions  signature_inference.rs  source_manager_spans.rs  ssa_coverage.rs  ssa_lifting.rs  ssa_lower.rs  stdlib_fixtures.rs  stdlib_header_oracle.rs  structuring.rs  type_inference.rs  u256_decompilation.rs  while_condition_update.rs  word_instruction_formatting.rs
(+48 files in other folders)
