[package]
name = "masm-decompiler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
lovely_env_logger = "0.6"
miden-assembly-syntax = { path = "../miden-vm/crates/assembly-syntax", default-features = false, features = ["std", "arbitrary"] }
yansi = "1.0"

[dev-dependencies]
proptest = "1.10"
