[package]
name = "masm-decompiler"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
lovely_env_logger = "0.6"
miden-assembly-syntax = { version = "=0.22.0", git = "https://github.com/0xMiden/miden-vm", rev = "821990729b83112fafe6de38377d55323c2db9c5", default-features = false, features = [
    "std",
    "arbitrary",
] }
yansi = "1.0"

[dev-dependencies]
proptest = "1.10"
