[package]
name = "masm-decompiler"
version = "0.8.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
lovely_env_logger = "0.6"
miden-assembly-syntax = { version = "=0.23.0", git = "https://github.com/0xMiden/miden-vm", rev = "c711256c7b8154a31c7955c0c01bb063da095c2b", default-features = false, features = [
    "std",
    "arbitrary",
] }
yansi = "1.0"

[dev-dependencies]
proptest = "1.10"
